--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "dependencies": {
     "twit": "~1.0.0",
-    "winston": "~0.7.1"
+    "winston": "~0.7.1",
+    "geocoder": "~0.1.0",
+    "underscore": "~1.4.4"
   },
   "devDependencies": {
   },
